--- a/forms/src/app/template-forms/template-forms-page/template-forms-page.component.html
+++ b/forms/src/app/template-forms/template-forms-page/template-forms-page.component.html
@@ -1,5 +1,9 @@
-<form class='mt-8 grid grid-cols-6 gap-10 px-2' #form='ngForm' (ngSubmit)='onSubmit(form)'
-      [ngFormOptions]="{ updateOn: 'blur' }">
+<form
+  class='mt-8 grid grid-cols-6 gap-10 px-2'
+  #form='ngForm'
+  (ngSubmit)='onSubmit(form)'
+  [ngFormOptions]="{ updateOn: 'blur' }"
+>
   <div class='col-span-6 sm:col-span-2'>
     <label for='FirstName' class='block text-sm font-medium text-gray-700'> First Name </label>
     <input
@@ -13,10 +17,16 @@
       #firstName='ngModel'
       required
       minlength='2'
+      [appBanWords]='["test", "hello"]'
     />
-    <span class='text-red-500 text-xs px-2' *ngIf='firstName.dirty && firstName.hasError("required")'>This field is required</span>
-    <span class='text-red-500 text-xs px-2' *ngIf='firstName.dirty && firstName.hasError("minlength")'>
-      The length should be at least <strong>{{firstName.getError('minlength')?.requiredLength}}</strong> characters
+    <span class='text-red-500 text-xs px-2' *ngIf="firstName.dirty && firstName.hasError('required')"
+    >This field is required</span
+    >
+    <span class='text-red-500 text-xs px-2' *ngIf="firstName.dirty && firstName.hasError('minlength')">
+      The length should be at least <strong>{{ firstName.getError('minlength')?.requiredLength }}</strong> characters
+    </span>
+    <span class='text-red-500 text-xs px-2' *ngIf="firstName.dirty && firstName.hasError('appBanWords')">
+      The value <strong>{{ firstName.getError('appBanWords').bannedWord }}</strong> is not allowed
     </span>
   </div>
   <div class='col-span-6 sm:col-span-2'>
@@ -32,9 +42,11 @@
       required
       minlength='3'
     />
-    <span class='text-red-500 text-xs px-2' *ngIf='lastName.dirty && lastName.hasError("required")'>This field is required</span>
-    <span class='text-red-500 text-xs px-2' *ngIf='lastName.dirty && lastName.hasError("minlength")'>
-      The length should be at least <strong>{{lastName.getError('minlength')?.requiredLength}}</strong> characters
+    <span class='text-red-500 text-xs px-2' *ngIf="lastName.dirty && lastName.hasError('required')"
+    >This field is required</span
+    >
+    <span class='text-red-500 text-xs px-2' *ngIf="lastName.dirty && lastName.hasError('minlength')">
+      The length should be at least <strong>{{ lastName.getError('minlength')?.requiredLength }}</strong> characters
     </span>
   </div>
   <div class='col-span-6 sm:col-span-2'>
@@ -50,6 +62,7 @@
       required
       minlength='2'
       pattern='^[\w.]+$'
+      appBanWords='test'
     />
   </div>
   <div class='col-span-6 sm:col-span-2'>
@@ -88,8 +101,10 @@
       pattern='^[A-Z]{2}[0-9]{3}$'
     />
   </div>
-  <fieldset class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4'
-            ngModelGroup='address'>
+  <fieldset
+    class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4'
+    ngModelGroup='address'
+  >
     <legend class='px-2 text-gray-400'>Address</legend>
     <div class='col-span-6 sm:col-span-2'>
       <label for='FullAddress' class='block text-sm font-medium text-gray-700'> Full Address </label>
