--- a/forms/src/app/template-forms/template-forms-page/template-forms-page.component.html
+++ b/forms/src/app/template-forms/template-forms-page/template-forms-page.component.html
@@ -1,6 +1,7 @@
 <form
   class='mt-8 grid grid-cols-6 gap-10 px-2'
   #form='ngForm'
+  (reset)='onReset($event)'
   (ngSubmit)='onSubmit(form)'
   [ngFormOptions]="{ updateOn: 'blur' }"
 >
