--- a/forms/src/app/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
+++ b/forms/src/app/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
@@ -8,11 +8,11 @@
     <input type='text' id='lastName' class='form-input' placeholder='Enter your last name' />
   </div>
   <div class='col-span-6 sm:col-span-2'>
-    <label for='nickName' class='form-label'>First Name</label>
+    <label for='nickName' class='form-label'>Nickname</label>
     <input type='text' id='nickName' class='form-input' placeholder='Come up with a nickname' />
   </div>
   <div class='col-span-6 sm:col-span-2'>
-    <label for='email' class='form-label'>First Name</label>
+    <label for='email' class='form-label'>Email</label>
     <input type='email' id='email' class='form-input' placeholder='Provide your email' />
   </div>
   <div class='col-span-6 sm:col-span-2'>
