--- a/forms/src/app/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
+++ b/forms/src/app/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
@@ -1,54 +1,61 @@
-<form class='mt-8 grid grid-cols-6 gap-8 px-2'>
+<form [formGroup]='form' class='mt-8 grid grid-cols-6 gap-8 px-2'>
+  <pre class='col-span-6'>{{form.value | json}}</pre>
   <div class='col-span-6 sm:col-span-2'>
     <label for='firstName' class='form-label'>First Name</label>
-    <input type='text' id='firstName' class='form-input' placeholder='Enter your name' />
+    <input formControlName='firstName' type='text' id='firstName' class='form-input' placeholder='Enter your name' />
   </div>
   <div class='col-span-6 sm:col-span-2'>
     <label for='lastName' class='form-label'>Last Name</label>
-    <input type='text' id='lastName' class='form-input' placeholder='Enter your last name' />
+    <input formControlName='lastName' type='text' id='lastName' class='form-input' placeholder='Enter your last name' />
   </div>
   <div class='col-span-6 sm:col-span-2'>
     <label for='nickName' class='form-label'>Nickname</label>
-    <input type='text' id='nickName' class='form-input' placeholder='Come up with a nickname' />
+    <input formControlName='nickname' type='text' id='nickName' class='form-input'
+           placeholder='Come up with a nickname' />
   </div>
   <div class='col-span-6 sm:col-span-2'>
     <label for='email' class='form-label'>Email</label>
-    <input type='email' id='email' class='form-input' placeholder='Provide your email' />
+    <input formControlName='email' type='email' id='email' class='form-input' placeholder='Provide your email' />
   </div>
   <div class='col-span-6 sm:col-span-2'>
     <label for='yearOfBirth' class='form-label'> Year of birth </label>
-    <select id='yearOfBirth' class='form-input'>
+    <select formControlName='yearOfBirth' id='yearOfBirth' class='form-input'>
       <option *ngFor='let year of years' [value]='year'>{{ year }}</option>
     </select>
   </div>
   <div class='col-span-6 sm:col-span-2'>
     <label for='passport' class='form-label'>Passport</label>
-    <input type='text' id='passport' class='form-input' placeholder='Provide passport data' />
+    <input formControlName='passport' type='text' id='passport' class='form-input'
+           placeholder='Provide passport data' />
   </div>
-  <fieldset class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4'>
+  <fieldset formGroupName='address'
+            class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4'>
     <legend class='px-2 text-gray-400'>Address</legend>
     <div class='col-span-6 sm:col-span-2'>
       <label for='fullAddress' class='form-label'>Full Address</label>
-      <input type='text' id='fullAddress' class='form-input' placeholder='Street name and house number' />
+      <input formControlName='fullAddress' type='text' id='fullAddress' class='form-input'
+             placeholder='Street name and house number' />
     </div>
     <div class='col-span-6 sm:col-span-2'>
       <label for='city' class='form-label'>City</label>
-      <input type='text' id='city' class='form-input' placeholder='City' />
+      <input formControlName='city' type='text' id='city' class='form-input' placeholder='City' />
     </div>
     <div class='col-span-6 sm:col-span-2'>
       <label for='postCode' class='form-label'>Post code</label>
-      <input type='text' id='postCode' class='form-input' placeholder='Post code' />
+      <input formControlName='postCode' type='text' id='postCode' class='form-input' placeholder='Post code' />
     </div>
   </fieldset>
   <fieldset class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4'>
     <legend class='px-2 text-gray-400'>User Password</legend>
     <div class='col-span-6 sm:col-span-2'>
       <label for='password' class='form-label'>Password</label>
-      <input type='password' id='password' class='form-input' placeholder="Enter user's password" />
+      <input formControlName='password' type='password' id='password' class='form-input'
+             placeholder="Enter user's password" />
     </div>
     <div class='col-span-6 sm:col-span-2'>
       <label for='confirmPassword' class='form-label'>Confirm Password</label>
-      <input type='password' id='confirmPassword' class='form-input' placeholder="Confirm user's password" />
+      <input formControlName='confirmPassword' type='password' id='confirmPassword' class='form-input'
+             placeholder="Confirm user's password" />
     </div>
   </fieldset>
   <div class='col-span-6 sm:flex sm:items-center sm:justify-end sm:gap-4 mt-4'>
