feat(reactive-forms): grouping controls into array

--- a/forms/src/app/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
+++ b/forms/src/app/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]='form' class='mt-8 grid grid-cols-6 gap-8 px-2'>
-  <pre class='col-span-6'>{{form.value | json}}</pre>
+  <pre class='fixed top-0 right-0 bg-blue-500 text-white backdrop-blur-lg shadow'>{{ form.value | json }}</pre>
   <div class='col-span-6 sm:col-span-2'>
     <label for='firstName' class='form-label'>First Name</label>
     <input formControlName='firstName' type='text' id='firstName' class='form-input' placeholder='Enter your name' />
@@ -10,8 +10,13 @@
   </div>
   <div class='col-span-6 sm:col-span-2'>
     <label for='nickName' class='form-label'>Nickname</label>
-    <input formControlName='nickname' type='text' id='nickName' class='form-input'
-           placeholder='Come up with a nickname' />
+    <input
+      formControlName='nickname'
+      type='text'
+      id='nickName'
+      class='form-input'
+      placeholder='Come up with a nickname'
+    />
   </div>
   <div class='col-span-6 sm:col-span-2'>
     <label for='email' class='form-label'>Email</label>
@@ -25,16 +30,28 @@
   </div>
   <div class='col-span-6 sm:col-span-2'>
     <label for='passport' class='form-label'>Passport</label>
-    <input formControlName='passport' type='text' id='passport' class='form-input'
-           placeholder='Provide passport data' />
+    <input
+      formControlName='passport'
+      type='text'
+      id='passport'
+      class='form-input'
+      placeholder='Provide passport data'
+    />
   </div>
-  <fieldset formGroupName='address'
-            class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4'>
+  <fieldset
+    formGroupName='address'
+    class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4'
+  >
     <legend class='px-2 text-gray-400'>Address</legend>
     <div class='col-span-6 sm:col-span-2'>
       <label for='fullAddress' class='form-label'>Full Address</label>
-      <input formControlName='fullAddress' type='text' id='fullAddress' class='form-input'
-             placeholder='Street name and house number' />
+      <input
+        formControlName='fullAddress'
+        type='text'
+        id='fullAddress'
+        class='form-input'
+        placeholder='Street name and house number'
+      />
     </div>
     <div class='col-span-6 sm:col-span-2'>
       <label for='city' class='form-label'>City</label>
@@ -49,13 +66,43 @@
     <legend class='px-2 text-gray-400'>User Password</legend>
     <div class='col-span-6 sm:col-span-2'>
       <label for='password' class='form-label'>Password</label>
-      <input formControlName='password' type='password' id='password' class='form-input'
-             placeholder="Enter user's password" />
+      <input
+        formControlName='password'
+        type='password'
+        id='password'
+        class='form-input'
+        placeholder="Enter user's password"
+      />
     </div>
     <div class='col-span-6 sm:col-span-2'>
       <label for='confirmPassword' class='form-label'>Confirm Password</label>
-      <input formControlName='confirmPassword' type='password' id='confirmPassword' class='form-input'
-             placeholder="Confirm user's password" />
+      <input
+        formControlName='confirmPassword'
+        type='password'
+        id='confirmPassword'
+        class='form-input'
+        placeholder="Confirm user's password"
+      />
+    </div>
+  </fieldset>
+  <fieldset
+    formArrayName='phones'
+    class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4 relative'
+  >
+    <legend class='px-2 text-gray-400'>Phones</legend>
+    <button type='button' (click)='addPhone()' class='absolute right-0 -top-3 bg-green-400 inline-block p-1 w-9'>
+      +
+    </button>
+    <div *ngFor='let phone of form.controls.phones.controls; index as i' class='col-span-6 sm:col-span-2 relative'>
+      <label for='phone-{{ i }}'>Phone number</label>
+      <input [formControlName]='i' type='text' id='phone-{{ i }}' class='form-input' />
+      <button
+        type='button'
+        (click)='removePhone(i)'
+        class='bg-red-500 text-white block w-5 h-5 rounded-full absolute top-0 right-0 leading-4'
+      >
+        -
+      </button>
     </div>
   </fieldset>
   <div class='col-span-6 sm:flex sm:items-center sm:justify-end sm:gap-4 mt-4'>
