--- a/forms/src/app/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
+++ b/forms/src/app/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]='form' class='mt-8 grid grid-cols-6 gap-8 px-2'>
-  <pre class='fixed top-0 right-0 bg-blue-500 text-white backdrop-blur-lg shadow'>{{ form.value | json }}</pre>
+  <pre class='fixed z-20 top-0 right-0 bg-blue-500 text-white backdrop-blur-lg shadow'>{{ form.value | json }}</pre>
   <div class='col-span-6 sm:col-span-2'>
     <label for='firstName' class='form-label'>First Name</label>
     <input formControlName='firstName' type='text' id='firstName' class='form-input' placeholder='Enter your name' />
@@ -90,15 +90,43 @@
     class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4 relative'
   >
     <legend class='px-2 text-gray-400'>Hobbies</legend>
-    <button type='button' (click)='addHobbie()' class='absolute right-0 -top-3 bg-green-400 inline-block p-1 w-9'>
+    <button type='button' (click)='addHobbies()' class='absolute right-0 -top-3 bg-green-400 inline-block p-1 w-9'>
       +
     </button>
     <div *ngFor='let _ of form.controls.hobbies.controls; index as i' class='col-span-6 sm:col-span-2 relative'>
       <label for='hobbies-{{ i }}'>Hobbies #{{i + 1}}</label>
-      <input [formControlName]='i' type='text' id='hobbies-{{ i }}' class='form-input' />
+      <input [formControlName]='i' type='text' id='hobbies-{{ i }}' class='form-input'
+             placeholder='Enter your hobbies' />
       <button
         type='button'
-        (click)='removeHobbie(i)'
+        (click)='removeHobbies(i)'
+        class='bg-red-500 text-white block w-5 h-5 rounded-full absolute top-0 right-0 leading-4'
+      >
+        -
+      </button>
+    </div>
+  </fieldset>
+  <fieldset
+    formArrayName='phones'
+    class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4 relative'
+  >
+    <legend class='px-2 text-gray-400'>Phones</legend>
+    <button type='button' (click)='addPhone()' class='absolute right-0 -top-3 bg-green-400 inline-block p-1 w-9'>
+      +
+    </button>
+    <div *ngFor='let _ of form.controls.phones.controls; index as i' [formGroupName]='i'
+         class='col-span-6 sm:col-span-2 relative'>
+      <label for='phone-{{ i }}'>Phone number</label>
+      <div class='flex gap-2'>
+        <select formControlName='label'>
+          <option *ngFor='let label of phoneLabels'>{{label}}</option>
+        </select>
+        <input formControlName='phone' type='text' id='phone-{{ i }}' class='form-input'
+               placeholder='Enter phone number' />
+      </div>
+      <button
+        type='button'
+        (click)='removePhone(i)'
         class='bg-red-500 text-white block w-5 h-5 rounded-full absolute top-0 right-0 leading-4'
       >
         -
