feat(reactive-forms): strictly typing form

--- a/forms/src/app/core/header/header.component.html
+++ b/forms/src/app/core/header/header.component.html
@@ -22,6 +22,7 @@
           <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/filters'>Advanced Filters</a>
         </nav>
         <input
+          [formControl]='query'
           type='text'
           placeholder='Global Search'
           class='bg-transparent outline outline-1 outline-white/50 px-4 py-2 rounded-full focus:outline-green-300'
