--- a/forms/src/app/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
+++ b/forms/src/app/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
@@ -132,8 +132,21 @@
       </button>
     </div>
   </fieldset>
+  <fieldset class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4 relative'>
+    <legend class='px-2 text-gray-400'>User Skills</legend>
+    <ng-container *ngIf='skills$ | async as skills; else loading'>
+      <div formGroupName='skills' *ngFor='let skill of skills' class='col-span-6 sm:col-span-1 flex items-center'>
+        <input [formControlName]='skill' type='checkbox' [id]='skill'>
+        <label [for]='skill' class='ml-1'>{{skill | titlecase}}</label>
+      </div>
+    </ng-container>
+  </fieldset>
   <div class='col-span-6 sm:flex sm:items-center sm:justify-end sm:gap-4 mt-4'>
     <app-button text='Reset' type='reset' />
     <app-button text='Create an account' type='submit' />
   </div>
 </form>
+
+<ng-template #loading>
+  <p>Loading skills...</p>
+</ng-template>
