--- a/forms/src/app/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
+++ b/forms/src/app/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
@@ -86,14 +86,14 @@
   </fieldset>
   <fieldset
     formArrayName='hobbies'
-    class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4 relative'
+    class='col-span-2 border border-gray-200 p-2 pb-0 relative'
   >
     <legend class='px-2 text-gray-400'>Hobbies</legend>
-    <button type='button' (click)='addHobbies()' class='absolute right-0 -top-3 bg-green-400 inline-block p-1 w-9'>
+    <button type='button' (click)='addHobbies()' class='absolute right-0 -top-6 bg-green-400 inline-block p-1 w-9'>
       +
     </button>
-    <div *ngFor='let _ of form.controls.hobbies.controls; index as i' class='col-span-6 sm:col-span-2 relative'>
-      <label for='hobbies-{{ i }}'>Hobbies #{{i + 1}}</label>
+    <div *ngFor='let _ of form.controls.hobbies.controls; index as i' class='mb-3 relative'>
+      <label for='hobbies-{{ i }}' class='form-label'>Hobbies #{{i + 1}}</label>
       <input [formControlName]='i' type='text' id='hobbies-{{ i }}' class='form-input'
              placeholder='Enter your hobbies' />
       <button
@@ -107,15 +107,15 @@
   </fieldset>
   <fieldset
     formArrayName='phones'
-    class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4 relative'
+    class='col-span-2 border border-gray-200 p-2 pb-0 relative'
   >
     <legend class='px-2 text-gray-400'>Phones</legend>
-    <button type='button' (click)='addPhone()' class='absolute right-0 -top-3 bg-green-400 inline-block p-1 w-9'>
+    <button type='button' (click)='addPhone()' class='absolute right-0 -top-6 bg-green-400 inline-block p-1 w-9'>
       +
     </button>
     <div *ngFor='let _ of form.controls.phones.controls; index as i' [formGroupName]='i'
-         class='col-span-6 sm:col-span-2 relative'>
-      <label for='phone-{{ i }}'>Phone number</label>
+         class='mb-3 relative'>
+      <label for='phone-{{ i }}' class='form-label'>Phone #{{i + 1}}</label>
       <div class='flex gap-2'>
         <select formControlName='label'>
           <option *ngFor='let label of phoneLabels'>{{label}}</option>
@@ -132,12 +132,12 @@
       </button>
     </div>
   </fieldset>
-  <fieldset class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4 relative'>
+  <fieldset class='col-span-2 border border-gray-200 p-2 pb-4 relative'>
     <legend class='px-2 text-gray-400'>User Skills</legend>
     <ng-container *ngIf='skills$ | async as skills; else loading'>
-      <div formGroupName='skills' *ngFor='let skill of skills' class='col-span-6 sm:col-span-1 flex items-center'>
+      <div formGroupName='skills' *ngFor='let skill of skills' class='mb-2.5 flex items-center'>
         <input [formControlName]='skill' type='checkbox' [id]='skill'>
-        <label [for]='skill' class='ml-1'>{{skill | titlecase}}</label>
+        <label [for]='skill' class='form-label ml-1'>{{skill | titlecase}}</label>
       </div>
     </ng-container>
   </fieldset>
