--- a/forms/src/app/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
+++ b/forms/src/app/reactive-forms/reactive-forms-page/reactive-forms-page.component.html
@@ -7,10 +7,10 @@
         This field is required
       </span>
       <span *ngIf="firstName?.dirty && firstName?.hasError('minlength')" class='error-message'>
-        This name must be at least <strong>{{firstName.getError('minlength').requiredLength}}</strong> characters
+        This name must be at least <strong>{{ firstName.getError('minlength').requiredLength }}</strong> characters
       </span>
       <span *ngIf="firstName?.dirty && firstName?.hasError('banWord')" class='error-message'>
-        The value <strong>{{firstName.getError('banWord')}}</strong> is banned
+        The value <strong>{{ firstName.getError('banWord') }}</strong> is banned
       </span>
     </ng-container>
   </div>
@@ -22,10 +22,10 @@
         This field is required
       </span>
       <span *ngIf="lastName?.dirty && lastName?.hasError('minlength')" class='error-message'>
-        This last name must be at least <strong>{{lastName.getError('minlength').requiredLength}}</strong> characters
+        This last name must be at least <strong>{{ lastName.getError('minlength').requiredLength }}</strong> characters
       </span>
       <span *ngIf="lastName?.dirty && lastName?.hasError('banWord')" class='error-message'>
-        The value <strong>{{lastName.getError('banWord')}}</strong> is banned
+        The value <strong>{{ lastName.getError('banWord') }}</strong> is banned
       </span>
     </ng-container>
   </div>
@@ -43,13 +43,13 @@
         This field is required
       </span>
       <span *ngIf="nickName?.dirty && nickName?.hasError('minlength')" class='error-message'>
-        This nickname must be at least <strong>{{nickName.getError('minlength').requiredLength}}</strong> characters
+        This nickname must be at least <strong>{{ nickName.getError('minlength').requiredLength }}</strong> characters
       </span>
       <span *ngIf="nickName?.dirty && nickName?.hasError('pattern')" class='error-message'>
         Only characters a-z, _ and .
       </span>
       <span *ngIf="nickName?.dirty && nickName?.hasError('banWord')" class='error-message'>
-        The value <strong>{{nickName.getError('banWord')}}</strong> is banned
+        The value <strong>{{ nickName.getError('banWord') }}</strong> is banned
       </span>
     </ng-container>
   </div>
@@ -97,7 +97,10 @@
       <input formControlName='postCode' type='text' id='postCode' class='form-input' placeholder='Post code' />
     </div>
   </fieldset>
-  <fieldset class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4'>
+  <fieldset
+    formGroupName='userPassword'
+    class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4'
+  >
     <legend class='px-2 text-gray-400'>User Password</legend>
     <div class='col-span-6 sm:col-span-2'>
       <label for='password' class='form-label'>Password</label>
@@ -108,6 +111,14 @@
         class='form-input'
         placeholder="Enter user's password"
       />
+      <ng-container *ngIf="form.controls.userPassword.get('password') as password">
+        <span *ngIf="password?.dirty && password?.hasError('required')" class='error-message'>
+          This field is required
+        </span>
+        <span *ngIf="password?.dirty && password?.hasError('minlength')" class='error-message'>
+          This name must be at least <strong>{{ password.getError('minlength').requiredLength }}</strong> characters
+        </span>
+      </ng-container>
     </div>
     <div class='col-span-6 sm:col-span-2'>
       <label for='confirmPassword' class='form-label'>Confirm Password</label>
@@ -118,6 +129,15 @@
         class='form-input'
         placeholder="Confirm user's password"
       />
+      <span
+        *ngIf="
+          form.controls.userPassword.get('confirmPassword')?.dirty &&
+          form.controls.userPassword.get('confirmPassword')?.hasError('noPasswordMatch')
+        "
+        class='error-message'
+      >
+        The password does not match
+      </span>
     </div>
   </fieldset>
   <fieldset formArrayName='hobbies' class='col-span-2 border border-gray-200 p-2 pb-0 relative'>
