--- a/signals/src/app/app.component.html
+++ b/signals/src/app/app.component.html
@@ -1,4 +1,3 @@
 <main class='w-screen h-screen flex flex-col items-center justify-center'>
-  <h1 class='text-4xl mb-10'>Signals</h1>
-  <app-age-calculator />
+  <app-crypto-page />
 </main>
